# jit-bril

./: .gitignore  Cargo.toml
src/: compiler.rs  interpreter.rs  interpreter_deprecated.rs  jit.rs  main.rs  program.rs  test.rs
test/: fib_funcs.bril  fib_funcs.json  test.py
test/benchmarks/: ackermann.bril  ackermann.json  fib_funcs.bril  fib_funcs.json  fib_funcs_500.bril  fib_funcs_500.json  knn.bril  knn.json  knn_100.bril  knn_100.json
test/generators/: add.json  binop_gen.py  branching.py  fib_funcs_gen.py  gen_tests.py  knn_gen.py
test/unit/: add.bril  add.json  call-args.bril  call-args.txt  call.bril  mul.bril  mul.json  mul.txt  sub.bril  sub.json  sub.txt
