[package]
name = "jit-bril"
version = "0.1.0"
authors = ["splashofcrimson <splashofcrimson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.1.18"
dynasm = "0.5"
dynasmrt = "0.5"

